Fix the button squish (#95)
This PR fixes the btn icon modifier inside of a flex container

--- a/src/components/button.scss
+++ b/src/components/button.scss
@@ -41,6 +41,7 @@
   // Icon Modifier
   &.btn--icon {
     border-radius: var(--rm-radius-circle);
+    min-width: var(--__rm-btn-height);
     width: var(--__rm-btn-height);
     padding: 0;
   }
